Fix wrapping for user profile in forums

--- a/app/static/css/forums.css
+++ b/app/static/css/forums.css
@@ -188,6 +188,7 @@ table {
     text-align: center;
     width: 160px;
     overflow: hidden;
+    overflow-wrap: anywhere;
     font-size: 115%;
     padding-top: 8px;
     padding-bottom: 8px;
